--- a/jacoco/de.weltraumschaf.jvfs.impl/JvfsFileAttributes.java.html
+++ b/jacoco/de.weltraumschaf.jvfs.impl/JvfsFileAttributes.java.html
@@ -76,7 +76,7 @@ import java.util.concurrent.TimeUnit;
 
     @Override
     public boolean isSymbolicLink() {
-<span class="nc" id="L79">        return entry.isSymbolicLink();</span>
+<span class="fc" id="L79">        return entry.isSymbolicLink();</span>
     }
 
     @Override
