--- a/jacoco/de.weltraumschaf.jvfs/JvfsFileSystems.java.html
+++ b/jacoco/de.weltraumschaf.jvfs/JvfsFileSystems.java.html
@@ -38,13 +38,13 @@ public final class JvfsFileSystems {
     /**
      * Name of property to set default file system provider implementations.
      *
-     * @see java.nio.file.FileSystems.DefaultFileSystemHolder#getDefaultProvider():java.nio.file.spi.FileSystemProvider
+     * @see java.nio.file.FileSystems.DefaultFileSystemHolder#getDefaultProvider()
      */
     private static final String IMPLEMENTATION_PROPERTY_NAME = &quot;java.nio.file.spi.DefaultFileSystemProvider&quot;;
     /**
      * Full qualified class name of provider implementation.
      */
-    private static final String IMPLEMENTATION = &quot;de.weltraumschaf.juberblog.jvfs.impl.JvfsFileSystemProvider&quot;;
+    private static final String IMPLEMENTATION = &quot;de.weltraumschaf.jvfs.impl.JvfsFileSystemProvider&quot;;
 
     /**
      * Hidden for pure static class.
