--- a/jacoco/de.weltraumschaf.jvfs.impl/JvfsFileAttributeView.java.html
+++ b/jacoco/de.weltraumschaf.jvfs.impl/JvfsFileAttributeView.java.html
@@ -9,7 +9,6 @@
  *
  * Copyright (C) 2012 &quot;Sven Strittmatter&quot; &lt;weltraumschaf@googlemail.com&gt;
  */
-
 package de.weltraumschaf.jvfs.impl;
 
 import java.io.IOException;
@@ -24,7 +23,7 @@ import java.util.Map;
  *
  * @author Sven Strittmatter &lt;weltraumschaf@googlemail.com&gt;
  */
-<span class="pc bpc" id="L27" title="1 of 2 branches missed.">final class JvfsFileAttributeView implements BasicFileAttributeView {</span>
+<span class="pc bpc" id="L26" title="1 of 2 branches missed.">final class JvfsFileAttributeView implements BasicFileAttributeView {</span>
 
     /**
      * To get attributes from.
@@ -37,47 +36,121 @@ import java.util.Map;
      * @param path must not be {@code null}
      */
     JvfsFileAttributeView(final JvfsPath path) {
-<span class="fc" id="L40">        super();</span>
-<span class="pc bpc" id="L41" title="2 of 4 branches missed.">        assert path != null : &quot;path must be specified&quot;;</span>
-<span class="fc" id="L42">        this.path = path;</span>
-<span class="fc" id="L43">    }</span>
+<span class="fc" id="L39">        super();</span>
+<span class="pc bpc" id="L40" title="2 of 4 branches missed.">        assert path != null : &quot;path must be specified&quot;;</span>
+<span class="fc" id="L41">        this.path = path;</span>
+<span class="fc" id="L42">    }</span>
 
     @Override
     public String name() {
-<span class="fc" id="L47">        return JvfsFileSystem.FILE_ATTR_VIEW_BASIC;</span>
+<span class="fc" id="L46">        return JvfsFileSystem.FILE_ATTR_VIEW_BASIC;</span>
     }
 
     @Override
     public BasicFileAttributes readAttributes() throws IOException {
-<span class="fc" id="L52">        return path.getAttributes();</span>
+<span class="fc" id="L51">        return path.getAttributes();</span>
     }
 
     @Override
     public void setTimes(final FileTime lastModifiedTime, final FileTime lastAccessTime, final FileTime createTime)
         throws IOException {
-<span class="fc" id="L58">        path.setTimes(lastModifiedTime, lastAccessTime, createTime);</span>
-<span class="fc" id="L59">    }</span>
+<span class="fc" id="L57">        path.setTimes(lastModifiedTime, lastAccessTime, createTime);</span>
+<span class="fc" id="L58">    }</span>
 
     /**
      * Sets the value of a file attribute.
      *
      * @param attribute must not be {@code nul} or empty
      * @param value must not be {@code nul} or empty
+     * @throws IOException IOException if file does not exist
      */
-    void setAttribute(final String attribute, final Object value) {
-<span class="nc" id="L68">        JvfsAssertions.notEmpty(attribute, &quot;attribute&quot;);</span>
-<span class="nc" id="L69">        JvfsAssertions.notNull(value, &quot;value&quot;);</span>
-<span class="nc" id="L70">        throw new UnsupportedOperationException(&quot;Not supported yet.&quot;);</span>
-    }
+    void setAttribute(final String attribute, final Object value) throws IOException {
+<span class="fc" id="L68">        JvfsAssertions.notEmpty(attribute, &quot;attribute&quot;);</span>
+<span class="fc" id="L69">        JvfsAssertions.notNull(value, &quot;value&quot;);</span>
+
+<span class="pc bfc" id="L71" title="All 4 branches covered.">        switch (AttrID.valueOf(attribute)) {</span>
+            case creationTime:
+<span class="fc" id="L73">                setTimes(null, null, (FileTime) value);</span>
+<span class="fc" id="L74">                break;</span>
+            case lastAccessTime:
+<span class="fc" id="L76">                setTimes(null, (FileTime) value, null);</span>
+<span class="fc" id="L77">                break;</span>
+            case lastModifiedTime:
+<span class="fc" id="L79">                setTimes((FileTime) value, null, null);</span>
+<span class="fc" id="L80">                break;</span>
+            default:
+<span class="fc" id="L82">                throw new UnsupportedOperationException(&quot;Attribute '&quot; + attribute</span>
+                    + &quot;' is unknown or read-only attribute!&quot;);
+        }
+<span class="fc" id="L85">    }</span>
 
     /**
      * Reads a set of file attributes as a bulk operation.
      *
+     * Examples:
+     * &lt;ul&gt;
+     * &lt;li&gt;{@code &quot;*&quot;}: Read all basic-file-attributes.&lt;/li&gt;
+     * &lt;li&gt;{@code &quot;size,lastModifiedTime,lastAccessTime&quot; }:
+     * Reads the file size, last modified time, and last access time attributes.&lt;/li&gt;
+     * &lt;/ul&gt;
+     *
      * @param attributes must not be {@code nul} or empty
-     * @return may be {@code null}
+     * @return never {@code null}
+     * @throws IOException if file does not exist
      */
-    Map&lt;String, Object&gt; readAttributes(String attributes) {
-<span class="nc" id="L80">        throw new UnsupportedOperationException(&quot;Not supported yet.&quot;);</span>
+    Map&lt;String, Object&gt; readAttributes(final String attributes) throws IOException {
+<span class="fc" id="L102">        JvfsAssertions.notEmpty(attributes, &quot;attributes&quot;);</span>
+<span class="fc" id="L103">        final BasicFileAttributes attrs = readAttributes();</span>
+<span class="fc" id="L104">        final Map&lt;String, Object&gt; map = JvfsCollections.newHashMap();</span>
+
+<span class="pc bpc" id="L106" title="1 of 2 branches missed.">        if (&quot;*&quot;.equals(attributes.trim())) {</span>
+<span class="fc bfc" id="L107" title="All 2 branches covered.">            for (AttrID id : AttrID.values()) {</span>
+<span class="fc" id="L108">                map.put(id.name(), attribute(id, attrs));</span>
+            }
+        } else {
+<span class="nc" id="L111">            final String[] as = attributes.trim().split(&quot;,&quot;);</span>
+
+<span class="nc bnc" id="L113" title="All 2 branches missed.">            for (String a : as) {</span>
+<span class="nc" id="L114">                map.put(a, attribute(AttrID.valueOf(a.trim()), attrs));</span>
+            }
+        }
+
+<span class="fc" id="L118">        return map;</span>
+    }
+
+    /**
+     * Get a path attribute by its name.
+     *
+     * @param id must not be {@code null}
+     * @param attrs must not {@code null}
+     * @return {@code null} if unsupported id given
+     */
+    Object attribute(final AttrID id, final BasicFileAttributes attrs) {
+<span class="pc bpc" id="L129" title="2 of 4 branches missed.">        assert id != null : &quot;id must be defined&quot;;</span>
+<span class="pc bpc" id="L130" title="2 of 4 branches missed.">        assert attrs != null : &quot;attrs must be defined&quot;;</span>
+
+<span class="pc bpc" id="L132" title="1 of 10 branches missed.">        switch (id) {</span>
+            case size:
+<span class="fc" id="L134">                return attrs.size();</span>
+            case creationTime:
+<span class="fc" id="L136">                return attrs.creationTime();</span>
+            case lastAccessTime:
+<span class="fc" id="L138">                return attrs.lastAccessTime();</span>
+            case lastModifiedTime:
+<span class="fc" id="L140">                return attrs.lastModifiedTime();</span>
+            case isDirectory:
+<span class="fc" id="L142">                return attrs.isDirectory();</span>
+            case isRegularFile:
+<span class="fc" id="L144">                return attrs.isRegularFile();</span>
+            case isSymbolicLink:
+<span class="fc" id="L146">                return attrs.isSymbolicLink();</span>
+            case isOther:
+<span class="fc" id="L148">                return attrs.isOther();</span>
+            case fileKey:
+<span class="fc" id="L150">                return attrs.fileKey();</span>
+            default:
+<span class="nc" id="L152">                return null;</span>
+        }
     }
 
     /**
@@ -86,8 +159,31 @@ import java.util.Map;
      * @return never {@code null}
      */
     Path getPath() {
-<span class="fc" id="L89">        return path;</span>
+<span class="fc" id="L162">        return path;</span>
     }
 
+    /**
+     * Names of attributes.
+     */
+<span class="fc" id="L168">    private static enum AttrID {</span>
+        /** Size attribute. */
+<span class="fc" id="L170">        size,</span>
+        /** Creation time attribute. */
+<span class="fc" id="L172">        creationTime,</span>
+        /** Last access time attribute. */
+<span class="fc" id="L174">        lastAccessTime,</span>
+        /** Last modification time attribute. */
+<span class="fc" id="L176">        lastModifiedTime,</span>
+        /** Is directory attribute. */
+<span class="fc" id="L178">        isDirectory,</span>
+        /** Is regular file attribute. */
+<span class="fc" id="L180">        isRegularFile,</span>
+        /** Is symbolic link attribute. */
+<span class="fc" id="L182">        isSymbolicLink,</span>
+        /** Is other file attribute. */
+<span class="fc" id="L184">        isOther,</span>
+        /** File key attribute. */
+<span class="fc" id="L186">        fileKey</span>
+    };
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.6.3.201306030806</span></div></body></html>
