--- a/jacoco/de.weltraumschaf.jvfs.impl/JvfsPathUtil.java.html
+++ b/jacoco/de.weltraumschaf.jvfs.impl/JvfsPathUtil.java.html
@@ -9,7 +9,6 @@
  *
  * Copyright (C) 2012 &quot;Sven Strittmatter&quot; &lt;weltraumschaf@googlemail.com&gt;
  */
-
 package de.weltraumschaf.jvfs.impl;
 
 import java.util.List;
@@ -20,7 +19,15 @@ import java.util.StringTokenizer;
  *
  * @author Sven Strittmatter &lt;weltraumschaf@googlemail.com&gt;
  */
-<span class="pc bpc" id="L23" title="1 of 2 branches missed.">final class JvfsPathUtil {</span>
+<span class="pc bpc" id="L22" title="1 of 2 branches missed.">final class JvfsPathUtil {</span>
+
+    /**
+     * Hidden for pure static class.
+     */
+    private JvfsPathUtil() {
+<span class="fc" id="L28">        super();</span>
+<span class="fc" id="L29">        throw new UnsupportedOperationException();</span>
+    }
 
     /**
      * Splits the given string by the directory separator.
@@ -29,15 +36,15 @@ import java.util.StringTokenizer;
      * @return never {@code null}
      */
     static List&lt;String&gt; tokenize(final String path) {
-<span class="fc" id="L32">        JvfsAssertions.notNull(path, &quot;path&quot;);</span>
-<span class="fc" id="L33">        final StringTokenizer tokenizer = new StringTokenizer(path, JvfsPath.DIR_SEP);</span>
-<span class="fc" id="L34">        final List&lt;String&gt; tokens = JvfsCollections.newArrayList();</span>
+<span class="fc" id="L39">        JvfsAssertions.notNull(path, &quot;path&quot;);</span>
+<span class="fc" id="L40">        final StringTokenizer tokenizer = new StringTokenizer(path, JvfsPath.DIR_SEP);</span>
+<span class="fc" id="L41">        final List&lt;String&gt; tokens = JvfsCollections.newArrayList();</span>
 
-<span class="fc bfc" id="L36" title="All 2 branches covered.">        while (tokenizer.hasMoreTokens()) {</span>
-<span class="fc" id="L37">            tokens.add(tokenizer.nextToken());</span>
+<span class="fc bfc" id="L43" title="All 2 branches covered.">        while (tokenizer.hasMoreTokens()) {</span>
+<span class="fc" id="L44">            tokens.add(tokenizer.nextToken());</span>
         }
 
-<span class="fc" id="L40">        return tokens;</span>
+<span class="fc" id="L47">        return tokens;</span>
     }
 
     /**
@@ -48,42 +55,42 @@ import java.util.StringTokenizer;
      * @return never {@code null}
      */
     static String normalize(final List&lt;String&gt; tokens, boolean absolute) {
-<span class="pc bpc" id="L51" title="2 of 4 branches missed.">        assert tokens != null : &quot;path must be specified&quot;;</span>
+<span class="pc bpc" id="L58" title="2 of 4 branches missed.">        assert tokens != null : &quot;path must be specified&quot;;</span>
 
         // Remove unnecessary references to this dir
-<span class="fc bfc" id="L54" title="All 2 branches covered.">        if (tokens.contains(JvfsPath.DIR_THIS)) {</span>
-<span class="fc" id="L55">            tokens.remove(JvfsPath.DIR_THIS);</span>
-<span class="fc" id="L56">            normalize(tokens, absolute);</span>
+<span class="fc bfc" id="L61" title="All 2 branches covered.">        if (tokens.contains(JvfsPath.DIR_THIS)) {</span>
+<span class="fc" id="L62">            tokens.remove(JvfsPath.DIR_THIS);</span>
+<span class="fc" id="L63">            normalize(tokens, absolute);</span>
         }
 
         // Remove unnecessary references to the back dir, and its parent
-<span class="fc" id="L60">        final int indexDirBack = tokens.indexOf(JvfsPath.DIR_UP);</span>
+<span class="fc" id="L67">        final int indexDirBack = tokens.indexOf(JvfsPath.DIR_UP);</span>
 
-<span class="fc bfc" id="L62" title="All 2 branches covered.">        if (indexDirBack != -1) {</span>
-<span class="pc bpc" id="L63" title="1 of 2 branches missed.">            if (indexDirBack &gt; 0) {</span>
-<span class="fc" id="L64">                tokens.remove(indexDirBack);</span>
-<span class="fc" id="L65">                tokens.remove(indexDirBack - 1);</span>
-<span class="fc" id="L66">                normalize(tokens, absolute);</span>
+<span class="fc bfc" id="L69" title="All 2 branches covered.">        if (indexDirBack != -1) {</span>
+<span class="pc bpc" id="L70" title="1 of 2 branches missed.">            if (indexDirBack &gt; 0) {</span>
+<span class="fc" id="L71">                tokens.remove(indexDirBack);</span>
+<span class="fc" id="L72">                tokens.remove(indexDirBack - 1);</span>
+<span class="fc" id="L73">                normalize(tokens, absolute);</span>
             } else {
-<span class="nc" id="L68">                throw new IllegalArgumentException(&quot;Cannot specify to go back \&quot;../\&quot; past the root&quot;);</span>
+<span class="nc" id="L75">                throw new IllegalArgumentException(&quot;Cannot specify to go back \&quot;../\&quot; past the root&quot;);</span>
             }
         }
 
         // Nothing left to do; reconstruct
-<span class="fc" id="L73">        final StringBuilder sb = new StringBuilder();</span>
+<span class="fc" id="L80">        final StringBuilder sb = new StringBuilder();</span>
 
-<span class="pc bpc" id="L75" title="1 of 2 branches missed.">        if (absolute) {</span>
-<span class="nc" id="L76">            sb.append(JvfsPath.DIR_SEP);</span>
+<span class="pc bpc" id="L82" title="1 of 2 branches missed.">        if (absolute) {</span>
+<span class="nc" id="L83">            sb.append(JvfsPath.DIR_SEP);</span>
         }
 
-<span class="fc bfc" id="L79" title="All 2 branches covered.">        for (int i = 0; i &lt; tokens.size(); i++) {</span>
-<span class="fc bfc" id="L80" title="All 2 branches covered.">            if (i &gt; 0) {</span>
-<span class="fc" id="L81">                sb.append(JvfsPath.DIR_SEP);</span>
+<span class="fc bfc" id="L86" title="All 2 branches covered.">        for (int i = 0; i &lt; tokens.size(); i++) {</span>
+<span class="fc bfc" id="L87" title="All 2 branches covered.">            if (i &gt; 0) {</span>
+<span class="fc" id="L88">                sb.append(JvfsPath.DIR_SEP);</span>
             }
-<span class="fc" id="L83">            sb.append(tokens.get(i));</span>
+<span class="fc" id="L90">            sb.append(tokens.get(i));</span>
         }
 
-<span class="fc" id="L86">        return sb.toString();</span>
+<span class="fc" id="L93">        return sb.toString();</span>
     }
 
 }
