--- a/pmd.html
+++ b/pmd.html
@@ -47,7 +47,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>PMD Results<a name="PMD_Results"></a></h2><p>The following document contains the results of <a class="externalLink" href="http://pmd.sourceforge.net/">PMD</a> 5.0.2.</p></div><div class="section"><h2>Files<a name="Files"></a></h2><div class="section"><h3>de/weltraumschaf/jvfs/impl/JvfsFileSystem.java<a name="deweltraumschafjvfsimplJvfsFileSystem.java"></a></h3><table align="center" border="0" class="bodyTable"><tr class="a"><th>Violation</th><th>Line</th></tr><tr class="b"><td>These nested if statements could be combined</td><td>361 - 363</td></tr><tr class="a"><td>These nested if statements could be combined</td><td>377 - 379</td></tr></table></div></div>
+        <div class="section"><h2>PMD Results<a name="PMD_Results"></a></h2><p>The following document contains the results of <a class="externalLink" href="http://pmd.sourceforge.net/">PMD</a> 5.0.2.</p></div><div class="section"><h2>Files<a name="Files"></a></h2></div>
       </div>
     </div>
     <div class="clear">
