--- a/taglist.html
+++ b/taglist.html
@@ -199,7 +199,7 @@
 <td>fixme</td></tr>
 <tr class="a">
 <td><a href="#tag_class_2">Things to do</a></td>
-<td>3</td>
+<td>5</td>
 <td>todo</td></tr>
 <tr class="b">
 <td><a href="#tag_class_1">This may be considered.</a></td>
@@ -208,7 +208,7 @@
 <p>Each tag is detailed below:</p>
 <div class="section">
 <h3><a name="tag_class_2">Things to do</a><a name="Things_to_do"></a></h3>
-<p><b>Number of occurrences found in the code: 3</b></p>
+<p><b>Number of occurrences found in the code: 5</b></p>
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>de.weltraumschaf.jvfs.impl.JvfsDirectoryStream</th>
@@ -217,27 +217,36 @@
 <td>Implement class.</td>
 <td>17</td></tr>
 <tr class="a">
+<th>de.weltraumschaf.jvfs.impl.JvfsFileEntry</th>
+<th>Line</th></tr>
+<tr class="b">
+<td>Implement is empty functionality.</td>
+<td>314</td></tr>
+<tr class="a">
+<td>Implement symbolic links.</td>
+<td>324</td></tr>
+<tr class="b">
 <th>de.weltraumschaf.jvfs.impl.JvfsFileStore</th>
 <th>Line</th></tr>
-<tr class="b">
+<tr class="a">
 <td>Implement get usedspace.</td>
 <td>61</td></tr>
-<tr class="a">
+<tr class="b">
 <th>de.weltraumschaf.jvfs.impl.JvfsFileSystem</th>
 <th>Line</th></tr>
-<tr class="b">
+<tr class="a">
 <td>Check parent direcotries.</td>
-<td>231</td></tr></table></div>
+<td>230</td></tr></table></div>
 <div class="section">
 <h3><a name="tag_class_1">This may be considered.</a><a name="This_may_be_considered."></a></h3>
 <p><b>Number of occurrences found in the code: 1</b></p>
 <table border="0" class="table table-striped">
-<tr class="a">
+<tr class="b">
 <th>de.weltraumschaf.jvfs.impl.JvfsPath</th>
 <th>Line</th></tr>
-<tr class="b">
+<tr class="a">
 <td>Consider returning own implementation, because File will may be circumvent JVFS.</td>
-<td>446</td></tr></table></div></div>
+<td>445</td></tr></table></div></div>
                   </div>
             </div>
           </div>
