--- a/jacoco/de.weltraumschaf.jvfs.impl/JvfsObject.java.html
+++ b/jacoco/de.weltraumschaf.jvfs.impl/JvfsObject.java.html
@@ -25,8 +25,8 @@ final class JvfsObject {
      * Hidden for pure static class.
      */
     private JvfsObject() {
-<span class="nc" id="L28">        super();</span>
-<span class="nc" id="L29">        throw new UnsupportedOperationException();</span>
+<span class="fc" id="L28">        super();</span>
+<span class="fc" id="L29">        throw new UnsupportedOperationException();</span>
     }
 
     /**
@@ -35,9 +35,33 @@ final class JvfsObject {
      * @param objects must not be {@code null}
      * @return any number
      */
-    public static int hashCode(final Object ... objects) {
-<span class="nc" id="L39">        JvfsAssertions.notNull(objects, &quot;objects&quot;);</span>
-<span class="nc" id="L40">        return Arrays.hashCode(objects);</span>
+    static int hashCode(final Object ... objects) {
+<span class="fc" id="L39">        JvfsAssertions.notNull(objects, &quot;objects&quot;);</span>
+<span class="fc" id="L40">        return Arrays.hashCode(objects);</span>
+    }
+
+    /**
+     * Determines if two objects are {@link Object#equals(java.lang.Object) equal} with
+     * respect of {@code null} values.
+     *
+     * @param a may be {@code null}
+     * @param b may be {@code null}
+     * @return {@code true} if a and b are equal, else {@code false}
+     */
+    static boolean equal(final Object a, final Object b) {
+<span class="pc bpc" id="L52" title="1 of 6 branches missed.">        return a == b || a != null &amp;&amp; a.equals(b);</span>
+    }
+
+    /**
+     * Determines if two objects are not {@link Object#equals(java.lang.Object) equal} with
+     * respect of {@code null} values.
+     *
+     * @param a may be {@code null}
+     * @param b may be {@code null}
+     * @return {@code true} if a and b are not equal, else {@code false}
+     */
+    static boolean notEqual(final Object a, final Object b) {
+<span class="fc bfc" id="L64" title="All 2 branches covered.">        return !equal(a, b);</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.6.3.201306030806</span></div></body></html>
